<resources>
    <string name="app_name">BookApp</string>
    <string name="splash_text">BookApp</string>
    <string name="Preferences_file_name">Mohit</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="token">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_favourite_books">Your Favourite books</string>
    <string name="name_of_book">Name of Book</string>
    <string name="name_of_author">Name of Author</string>
    <string name="default_price">Rs 299</string>
    <string name="check_internet">Check Internet</string>
    <string name="about_the_book">About the book:</string>
    <string name="add_to_favourites">Add to Favourites</string>
</resources>
