<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#0277bd"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llconent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="#ffff"
            android:orientation="horizontal"
            android:weightSum="6">

            <!--The weight sum property is used to divide the layout into
        different parts and then giving each layout a particular weight
        gives it that amount of space on the screen-->


            <!--Since each parent layout will have a specific weight, we need
        not give any width to those layout-->
            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1.5"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="3.3">

                <TextView
                    android:id="@+id/txtBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="6dp"
                    android:text="@string/name_of_book"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtBookName"
                    android:layout_marginLeft="10dp"
                    android:padding="6dp"
                    android:text="@string/name_of_author"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAuthorName"
                    android:layout_alignParentBottom="false"
                    android:layout_marginLeft="10dp"
                    android:padding="6dp"
                    android:text="@string/default_price"
                    android:textColor="#357a38"
                    android:textSize="15sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtBookRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1.2"
                android:drawableLeft="@drawable/ic_ratings"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:text="4.5"
                android:textColor="#ffca28"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llconent">

            <TextView
                android:id="@+id/txtabout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/about_the_book"
                android:textColor="#000"
                android:padding="6dp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txtdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:layout_below="@id/txtabout"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ButtonColor"
        android:text="@string/add_to_favourites"
        android:textColor="#fff"
        android:textSize="15sp"/>

    <RelativeLayout
        android:id="@+id/Progresslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ProgressBar
            android:id="@+id/Progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</RelativeLayout>