<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#ffff">


<LinearLayout
    android:id="@+id/llconent"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:background="#ffff"
    android:weightSum="6">

    <!--The weight sum property is used to divide the layout into
    different parts and then giving each layout a particular weight
    gives it that amount of space on the screen-->


    <!--Since each parent layout will have a specific weight, we need
    not give any width to those layout-->
    <ImageView
        android:id="@+id/imgBook"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"/>
    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="150dp">
        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_book"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:padding="6dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/txtAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:text="@string/name_of_author"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:padding="6dp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAuthorName"
            android:text="@string/default_price"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="#357a38"
            android:layout_alignParentBottom="false"
            android:padding="6dp"
            android:textStyle="normal" />

    </RelativeLayout>
    <TextView
        android:id="@+id/txtBookRating"
        android:layout_weight="1.2"
        android:layout_width="0dp"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_ratings"
        android:layout_marginTop="5dp"
        android:textColor="#ffca28"
        android:text="4.5"
        android:drawablePadding="4dp"
        android:textSize="15sp"
        android:textStyle="bold"/>



</LinearLayout>
</androidx.cardview.widget.CardView>